@@ -499,6 +499,41 @@ argument_list|)
 expr_stmt|;
 block|}
 annotation|@
+name|Test
+DECL|method|testLastMillionYearPeriod
+specifier|public
+name|void
+name|testLastMillionYearPeriod
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|testOperation
+argument_list|(
+name|tree
+operator|.
+name|parseShape
+argument_list|(
+literal|"+292220922-05-17T18:01:57.572"
+argument_list|)
+argument_list|,
+comment|// a year in the last million year period (>=292M)
+name|SpatialOperation
+operator|.
+name|Intersects
+argument_list|,
+name|tree
+operator|.
+name|parseShape
+argument_list|(
+literal|"[1970 TO *]"
+argument_list|)
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
 name|Override
 DECL|method|randomIndexedShape
 specifier|protected
